ns1/ns1-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo
  namespace: ns1
spec:
  hosts:
  - lnxapp.k8s.avinash.dockerps.io
  gateways:
  - istio-system/cluster-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: demo-service
        subset: v1
        port:
          number: 8080

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo-destinationrule
  namespace: ns1
spec:
  host: demo-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
